First Real Edit on Webpage seeing if CSS goes through

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World Testing webpage changes
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Webpage Hosted by Github Pages</h1>
+
+<p style="color:red">Hello, I am just a humble newbie looking to see if my changes are being commited.</p>
+
+</body>
+</html>
