--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="mystyle.css">
+    </head>
 <body>
 
 <h1>Webpage Hosted by Github Pages</h1>
