Testing commit and push functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Webpage Hosted by Github Pages</h1>
 
-<p style="color:red">Hello, I am just a humble newbie looking to see if my changes are being commited.</p>
+<p style="color:red">How to make changes to website</p>
 
 </body>
 </html>
