This area describes the changes you are committing.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Webpage Hosted by Github Pages</h1>
 
-<p style="color:red">How to make changes to website</p>
+<p style="color:red">How to make changes to website: Commit and Push</p>
 
 </body>
 </html>
