--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="mystyle.css">
-    </head>
-<body>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
 
-<h1>Webpage Hosted by Github Pages</h1>
+    <title>Number guessing game</title>
 
-<p style="color:red">How to make changes to website: Commit and Push</p>
+    <style>
+      html {
+        font-family: sans-serif;
+      }
 
-</body>
+      body {
+        width: 50%;
+        max-width: 800px;
+        min-width: 480px;
+        margin: 0 auto;
+      }
+      
+      .form input[type="number"] {
+        width: 200px;
+      }
+
+      .lastResult {
+        color: white;
+        padding: 3px;
+      }
+    </style>
+    <link rel="stylesheet" href="/guessGame/guessGame.css">
+  </head>
+
+  <body>
+    <h1>Number guessing game</h1>
+
+    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
+
+    <div class="form">
+      <label for="guessField">Enter a guess: </label>
+      <input type="number" min="1" max="100" required id="guessField" class="guessField">
+      <input type="submit" value="Submit guess" class="guessSubmit">
+    </div>
+
+    <div class="resultParas">
+      <p class="guesses"></p>
+      <p class="lastResult"></p>
+      <p class="lowOrHi"></p>
+    </div>
+
+    <script src="/guessGame/guessGame.js">
+    </script>
+  </body>
 </html>
