i ADDED a word to alpaca alt text

--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@ audio {
 
 <p>This webpage features a black background, white text, images, and embedded audio.</p>
 
-<img src="Alpaca.jpg" alt="ALPACA Image">
+<img src="Alpaca.jpg" alt="ALPACA Image  COMMIT">
 
 <audio controls>
   <source src="audio.mp3" type="audio/mpeg">
