New Image and Html update

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ audio {
 
 <h1>Welcome to my Webpage!</h1>
 
-<p>This webpage features a black background, white text, images, and embedded audio.</p>
+<p style="font-size: x-large;">My face when student do their classwork on time. </p>
 
-<img src="Alpaca.jpg" alt="ALPACA Image  COMMIT">
+<img src="LetmeKnowMicah.jpg" alt="ALPACA Image  COMMIT">
 
 <audio controls>
   <source src="audio.mp3" type="audio/mpeg">
