--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ audio {
 
 <p style="font-size: x-large;">My face when student do their classwork on time. </p>
 
-<img src="LetmeKnowMicah.jpg" alt="ALPACA Image  COMMIT">
+<img src="Alpaca.jpg" alt="ALPACA Image  COMMIT">
 
 <audio controls>
   <source src="LetmeKnow.mp3" type="audio/mpeg">
